# IsswJsonHelper

./: .coverage  .env-default  .gitignore  README.md  app.py  main.py  output.json  pyproject.toml  structure.py  test.json
classes/: decorators.py  helpers.py  kosztorys_generator.py  types.py
classes/analyzer/: analyzer.py
classes/applications/: __init__.py  applications.py
classes/estimate_builder/: application_estimate_builder.py  estimate_builder.py
classes/form_builder/: application_builder.py  calculation_rule.py  form_builder.py  form_builder_base.py  report_builder.py  validator.py
classes/form_components/: __init__.py
classes/form_elements/: form_chapter.py  form_component.py  form_element.py  form_part.py
classes/form_factory/: form_factory.py  form_helpers.py
classes/form_helper/: form_helper.py
classes/form_rules/: __init__.py  calculation_rule.py  validator.py
classes/generator/: applications.py  dpf_generator.py  duk_generator.py  dwm_generator.py  generator.py
classes/pisf_structure/: __init__.py  department.py  priority.py
classes/postman/: postman.py
classes/web_scraper/: web_scraper.py
classes/web_scrapper/: web_scrapper.py
classes_new/additional/: form_helpers.py
classes_new/form_builder/: form_builder.py
classes_new/form_elements/: __init__.py  form_chapter.py  form_component.py  form_element.py  form_form.py  form_part.py
classes_new/form_factory/: form_factory.py
generators/: dpf.py  duk.py  dwm.py
output/: .gitignore  forms_index.json  output.json
scripts/: delete_unused_args.py  update_dataBDD.py
(+656 files in other folders)
